--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,20 @@
-<div>
-    <div>
-        <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" [routerLink]="['/']">Store</a>
-            </div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">    
+      <li routerLinkActive="active">
+        <a [routerLink]="['home']">Store</a> </li>
+      <li routerLinkActive="active">
+        <a [routerLink]="['register']">Register</a> </li>
+      <li routerLinkActive="active">
+        <a [routerLink]="['about']">About</a> </li>
+    </ul>
+  
+  <ul class="nav navbar-nav navbar-right">
+      <li><app-login></app-login></li>
+  </ul>
+  </div>
+</nav>
 
-            <div>
-              <ul class="nav navbar-nav">
-                <li routerLinkActive="active">
-                    <a [routerLink]="['admin']">Admin</a>
-                </li>
-                <li routerLinkActive="active">
-                    <a [routerLink]="['login']">Login</a>
-                </li>
-
-                <li routerLinkActive="active">
-                    <a [routerLink]="['about']">About</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-
-        <div class="container">
-          <router-outlet></router-outlet>
-        </div>
-    </div>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
