--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,40 +1,20 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h4 class="pannel-title">
-            Login Form
-        </h4>
-    </div>
     <div class="panel-body">
-        <form id="user-form" (ngSubmit)="Register()">
-          <div class="form-group">
-            <label for="Login">Login</label>
-            <input type="text" 
-                class="form-control"
-                name="login" 
-                placeholder="Login"
-                required
-                [(ngModel)]="_login">
-          </div>
-          <div class="form-group">
-            <label for="Password">Password</label>
-            <input type="password"
-                name="pass" 
-                class="form-control" 
-                placeholder="Password"
-                required
-                [(ngModel)]="_pass">
-          </div>
-	  <button 
-            type="submit" 
-            class="btn btn-primary"
-            form="user-form">{{btnCaption}}
-        </button>
-        <!--<button *ngIf="btnCaption=='Login'" class="btn btn-primary"
-            type="button"
-            (click)="Register($event)">Back
-        </button>-->
+        <form id="user-form" (ngSubmit)="LogIn()" *ngIf="!_userService.CurrUser">
+            <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                <input [(ngModel)]="_login" type="text" name="login" class="form-control" placeholder="Login" required>
+                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                <input [(ngModel)]="_pass" type="password" name="pass" class="form-control" placeholder="Password" required>
+                <div class="input-group-btn">
+                    <button class="btn btn-primary" type="submit" form="user-form">
+                        <i>Login</i>
+                    </button>
+                </div>
+            </div>
         </form>
+        <div *ngIf="_userService.CurrUser">
+            <label>user: {{_userService.CurrUser.name}} </label>
+            <button (click)="LogOut()" class="btn btn-primary" type="button">LogOut
+            </button>
+        </div>
     </div>
-</div>
-
-
