Done 1. Список товаров 2. Карточку товара 3. Добавление в корзину 4. Удаление из корзины 5. Формирование заказа

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,7 +13,7 @@
             </div>
         </form>
         <div *ngIf="_userService.CurrUser">
-            <label>user: {{_userService.CurrUser.name}} </label>
+            <label>user: {{_userService.CurrUser.login}} </label>
             <button (click)="LogOut()" class="btn btn-primary" type="button">LogOut
             </button>
         </div>
