--- a/src/app/store/car-list/car-list.component.html
+++ b/src/app/store/car-list/car-list.component.html
@@ -1,4 +1,6 @@
 <car 
-  *ngFor="let car of cars" 
-  [car]="car">
+  *ngFor="let car of _cars" 
+  [car]="car"
+  [storeMode]=true
+  (toBasket)=AddToBasket($event)>
 </car>
