--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,11 @@
   <div class="container-fluid">
     <ul class="nav navbar-nav">    
       <li routerLinkActive="active">
-        <a [routerLink]="['home']">Store</a> </li>
+        <a [routerLink]="['store']">Store</a> </li>
+
       <li routerLinkActive="active">
-        <a [routerLink]="['register']">Register</a> </li>
+        <a [routerLink]="['register']">Register</a> </li>  
+        
       <li routerLinkActive="active">
         <a [routerLink]="['about']">About</a> </li>
     </ul>
