--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,8 +8,31 @@
         <form id="reg-user-form" (ngSubmit)="Register()">
             <div class="form-group">
                 <label for="Login">Login</label>
-                <input type="text" name="login" class="form-control" placeholder="Login" required [(ngModel)]="_login">              
+                <input type="text" 
+                    name="login" 
+                    class="form-control" 
+                    placeholder="Login" 
+                    required [(ngModel)]="_login">              
             </div>
+
+            <div class="form-group">
+                <label for="firstName">First Name</label>
+                <input type="text" 
+                    class="form-control" 
+                    id="firstName" name="firstName"
+                    placeholder="First Name"
+                    required
+                    [(ngModel)]="_firstName">
+          </div>
+          <div class="form-group">
+              <label for="lastName">Last Name</label>
+              <input type="text" 
+                  class="form-control" 
+                  id="lastName" name="lastName"
+                  placeholder="Last Name"
+                  required
+                  [(ngModel)]="_lastName">
+          </div>
             <div class="form-group">
                 <label for="Password">Password</label>
                 <input type="password" name="pass" class="form-control" placeholder="Password" required [(ngModel)]="_pass">
