6. Админку (добавление/редактирование товара, количества, цены, ..., просмотр заказов). Админку 	защитить. Подгружать динамически, если у пользователя есть право работать как админ. 7. Любую дополнительную интересную для Вас функциональность. (опишите, что Вы реализуете в ридми). 8. Организуйте работу с localstorage/json files.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,13 @@
-<p>
-  admin works!
-</p>
+<!--<h3>Admin</h3>-->
+<nav>
+  <ul class="nav nav-tabs">
+    <li routerLinkActive="active">
+      <a [routerLink]="['./users']">Manage Users</a>
+    </li>
+    <li routerLinkActive="active">
+      <a [routerLink]="['./cars']">Manage Cars</a>
+    </li>
+  </ul>
+</nav>
+
+<router-outlet></router-outlet>
