--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -12,7 +12,8 @@
                     name="login" 
                     class="form-control" 
                     placeholder="Login" 
-                    required [(ngModel)]="_login">              
+                    required
+                    [(ngModel)]="_login">              
             </div>
 
             <div class="form-group">
