--- a/src/app/store/order/order.component.html
+++ b/src/app/store/order/order.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="_currUser != null" class="panel panel-default">
+<div *ngIf="_currUser" class="panel panel-default">
     <div class="panel-heading">
         <h4 class="pannel-title">
             Order Form
