--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,11 @@
         <a [routerLink]="['about']">About</a> </li>
     </ul>
   
+  <ul *ngIf="this._userService.CurrUser" class="nav navbar-nav">
+      <li routerLinkActive="active">
+        <a [routerLink]="['admin']">Admin</a> </li>  
+  </ul>  
+  
   <ul class="nav navbar-nav navbar-right">
       <li><app-login></app-login></li>
   </ul>
