--- a/src/app/admin/cars/car-list/car-list.component.html
+++ b/src/app/admin/cars/car-list/car-list.component.html
@@ -9,5 +9,8 @@
      (edit)=carEdit($event)
      (delete)=carRemove($event)>
     </car-ext>
+  </div>
+  <div class="panel-heading">
+    <button type="button" (click)="AddCar()" class="btn btn-primary">Add Car</button>
   </div>  
 </div>
